feat(index): add basic structure and test title

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Let spread Slip de bain EVERYWHERE!</title>
+    </head>
+</html>
 Hello World
